Content Ticker: Fixed alignment of text

--- a/assets/css/frontend-rtl.css
+++ b/assets/css/frontend-rtl.css
@@ -2777,6 +2777,8 @@ div[class*=' pa-'] {
   overflow: hidden; }
   .pp-content-ticker .swiper-wrapper {
     align-items: center; }
+    .pp-content-ticker .swiper-wrapper .swiper-slide {
+      text-align: right; }
   .pp-content-ticker .pp-content-ticker-item-title {
     font-size: 20px;
     margin: 0; }
